<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_services">

    <fragment
        android:id="@+id/navigation_services"
        android:name="edu.tacoma.uw.barber_mobile_application.ui.services.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" >
        <action
            android:id="@+id/action_navigation_services_to_optionsFragment"
            app:destination="@id/optionsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_portfolio"
        android:name="edu.tacoma.uw.barber_mobile_application.ui.portfolio.PortfolioFragment"
        android:label="@string/title_portfolio"
        tools:layout="@layout/fragment_portfolio" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="edu.tacoma.uw.barber_mobile_application.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" >
        <action
            android:id="@+id/action_navigation_details_to_aboutFragment2"
            app:destination="@id/aboutFragment2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="edu.tacoma.uw.barber_mobile_application.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/optionsFragment"
        android:name="edu.tacoma.uw.barber_mobile_application.ui.services.OptionsFragment"
        android:label="Extra Options"
        tools:layout="@layout/fragment_options">
        <action
            android:id="@+id/action_optionsFragment_to_bookFragment"
            app:destination="@id/bookFragment" />
    </fragment>
    <fragment
        android:id="@+id/bookFragment"
        android:name="edu.tacoma.uw.barber_mobile_application.ui.services.BookFragment"
        android:label="Booking"
        tools:layout="@layout/fragment_book" />
    <fragment
        android:id="@+id/aboutFragment2"
        android:name="edu.tacoma.uw.barber_mobile_application.ui.details.AboutFragment"
        android:label="About "
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="edu.tacoma.uw.barber_mobile_application.ui.account.LoginFragment"
        android:label="LoginFragment" />
    <fragment
        android:id="@+id/registrationFragment"
        android:name="edu.tacoma.uw.barber_mobile_application.ui.account.RegistrationFragment"
        android:label="RegistrationFragment" />
</navigation>