<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding='16dp'>

            <fragment
                android:id="@+id/google_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:text="Business Hours:"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Monday - Saturday:                    11AM - 2PM\n                                                          3PM - 6PM\nSunday:                                         12PM - 5PM"
                android:textSize="18sp"
                android:paddingBottom="15dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:text="Business Amenities:"
                android:textSize="22sp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Parking Space"
                android:textSize="15sp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Accessible for people with disabilities"
                android:textSize="15sp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Child friendly"
                android:textSize="15sp"
                android:paddingBottom="15dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:text="Contact Information:"
                android:textSize="22sp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:autoLink="phone"
                android:linksClickable="true"
                android:text="+1(253) 344-1487"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="theempirebarbershop@gmail.com"
                android:autoLink="email"
                android:linksClickable="true"
                android:textSize="18sp"
                android:paddingBottom="15dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:text="Business Socials:"
                android:textSize="22sp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/details_instagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_instagram"
                    android:contentDescription="@string/title_instagram"
                    android:background="@null"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="35dp"/>

                <ImageButton
                    android:id="@+id/details_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook"
                    android:contentDescription="@string/title_facebook"
                    android:background="@null"
                    android:layout_marginBottom="15dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/details_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/policy"
                android:textSize="18sp"
                android:paddingBottom="8dp"
                android:textColor="@color/teal_200"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>